Changelog
=========

2016-09-27 - v1.9
-----------------
* Feature: boost matching on the tags in ES searches
  [tiberich #77048]

17/08/2016 - v1.8
-----------------
* Bug fix: use proper :ok status when updating from Sync API
[tiberich #22237]

09/08/2016 - v1.7
-----------------
* Change default from field for notification emails
[tiberich #71624]

28/07/2016 - v1.6
-----------------
* Add skip_before_action :verify_authenticity_token to Api::V1::SyncController

28/07/2016 - v1.5
-----------------
* Bumped max size validator for "author" to 2048
* Properly save description field in Link edit form

(In development)
----------------------
  [Jon Arrien]
